[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/sector_system.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true

[sub_resource type="SphereShape" id=3]

[node name="SectorSystem" type="Spatial"]
script = ExtResource( 1 )

[node name="SystemMesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="ColiisionArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ColiisionArea"]
shape = SubResource( 3 )

[connection signal="input_event" from="ColiisionArea" to="." method="_on_ColiisionArea_input_event"]
